src/main/java/com/example/uniport/api/common/error/ConflictException.java
package com.example.uniport.api.common.error;

public class ConflictException extends ApiException {
	public ConflictException() {
		super(ErrorCode.CONFLICT);
	}

	public ConflictException(String message) {
		super(ErrorCode.CONFLICT, message);
	}
}

